# Farol-vigia

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
farol_core/application/: collect_usecase.py
farol_core/domain/: contracts.py  errors.py
farol_core/infrastructure/db/: mongo_writer.py
farol_core/infrastructure/hashing/: __init__.py  sha256_deduper.py
farol_core/infrastructure/http/: httpx_fetcher.py
farol_core/infrastructure/logging/: logger.py
farol_core/infrastructure/normalizers/: __init__.py  date_normalizer.py  text_cleaner.py  url_normalizer.py
farol_core/infrastructure/parsing/: html_tree.py  normalizer.py  selectolax_parser.py
farol_core/infrastructure/scraping/: __init__.py  requests_soup_scraper.py
farol_core/infrastructure/time/: system_clock.py
farol_core/interfaces/: cli.py
tests/integration/: test_cli_dry_run.py  test_cli_portals.py
tests/integration/doubles/: __init__.py  portal_components.py
tests/unit/: test_collect_usecase.py  test_contracts.py  test_errors.py  test_mongo_writer.py  test_normalizer.py
tests/unit/hashing/: test_sha256_deduper.py
tests/unit/normalizers/: test_date_normalizer.py  test_text_cleaner.py  test_url_normalizer.py
tests/unit/scraping/: test_requests_soup_scraper.py
